# QCQPcpp

./: CMakeLists.txt  Doxyfile  README.md
doc/html/: annotated.html  bonmin_opt_problem_8h_source.html  classes.html  classqcqpcpp_1_1_bonmin_opt-members.html  classqcqpcpp_1_1_bonmin_opt.html  classqcqpcpp_1_1_bonmin_opt__coll__graph.dot  classqcqpcpp_1_1_bonmin_opt__coll__graph.md5  classqcqpcpp_1_1_bonmin_opt__inherit__graph.dot  classqcqpcpp_1_1_bonmin_opt__inherit__graph.md5  classqcqpcpp_1_1_bonmin_opt_exception.html  classqcqpcpp_1_1_bonmin_opt_exception__coll__graph.dot  classqcqpcpp_1_1_bonmin_opt_exception__coll__graph.md5  classqcqpcpp_1_1_bonmin_t_m_i_n_l_p-members.html  classqcqpcpp_1_1_bonmin_t_m_i_n_l_p.html  classqcqpcpp_1_1_bonmin_t_m_i_n_l_p__inherit__graph.dot  classqcqpcpp_1_1_bonmin_t_m_i_n_l_p__inherit__graph.md5  classqcqpcpp_1_1_mosek_opt-members.html  classqcqpcpp_1_1_mosek_opt.html  classqcqpcpp_1_1_mosek_opt__coll__graph.dot  classqcqpcpp_1_1_mosek_opt__coll__graph.md5  classqcqpcpp_1_1_mosek_opt__inherit__graph.dot  classqcqpcpp_1_1_mosek_opt__inherit__graph.md5  classqcqpcpp_1_1_mosek_opt_a304b5fe236be1a31449e1ca6e78f0bf6_cgraph.dot  classqcqpcpp_1_1_mosek_opt_a304b5fe236be1a31449e1ca6e78f0bf6_cgraph.md5  classqcqpcpp_1_1_opt_problem-members.html  classqcqpcpp_1_1_opt_problem.html  classqcqpcpp_1_1_opt_problem__coll__graph.dot  classqcqpcpp_1_1_opt_problem__coll__graph.md5  classqcqpcpp_1_1_opt_problem__inherit__graph.dot  classqcqpcpp_1_1_opt_problem__inherit__graph.md5  dir_89ff321052f166c6c97a36425b4e4edc.html  dir_89ff321052f166c6c97a36425b4e4edc_dep.dot  dir_89ff321052f166c6c97a36425b4e4edc_dep.md5  dir_9645aef16d6051dcc84f7d84e301a986.html  dir_9645aef16d6051dcc84f7d84e301a986_dep.dot  dir_9645aef16d6051dcc84f7d84e301a986_dep.md5  dir_d2a0cb91e5ceb358cb193a8b6a73e5de.html  dir_d2a0cb91e5ceb358cb193a8b6a73e5de_dep.dot  dir_d2a0cb91e5ceb358cb193a8b6a73e5de_dep.md5  dir_d45cdcab7aed55ceebc00a1bb83684e7.html  (+34 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  (+11 more)
include/qcqpcpp/: bonminOptProblem.h  mosekOptProblem.h  optProblem.h
include/qcqpcpp/impl/: mosekOptProblem.hpp  optProblem.hpp
include/qcqpcpp/io/: io.h
src/test/: test.cpp  testQuadraticConstraints.cpp
